# Mutiny

./: .flake8  .gitignore  .license_header.txt  .pre-commit-config.yaml  .readthedocs.yaml  NOTICE  README.md  pyproject.toml
.github/workflows/: publish_release.yaml  run_precommit.yaml
docs/: conf.py  index.rst
docs/api/: bits.rst  client.rst  enums.rst  errors.rst  events.rst  index.rst  models.rst
examples/: basic_client.py  get_session_id_and_token.py  get_user_session_token.py
src/mutiny/: __init__.py  bits.py  enums.py  errors.py  events.py  models.py
src/mutiny/_internal/: __init__.py  authentication_data.py  backoff.py  bit_fields.py  client.py  enums.py  errors.py  event_handler.py  events.py  gateway.py  rest.py  state.py  utils.py
src/mutiny/_internal/models/: __init__.py  attachment.py  channel.py  embed.py  message.py  permission_override.py  permissions.py  server.py  user.py
src/mutiny/_internal/models/bases/: __init__.py  bit_field.py  cachable_model.py  models.py
